--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,12 +1,29 @@
 
-/* 
+/* index.css */
 
-    You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
+body {
+    font-family: Arial, sans-serif;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    margin: 0;
+    background-color: #f2ff04;
+}
 
-*/
+.bigCounter {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #333;
+    color: #fff;
+    border-radius: 10px;
+    padding: 20px;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+}
+
+.bigCounter > div {
+    margin: 0 10px;
+    font-size: 100px;
+    text-align: center;
+}
